--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é JavaScript?
+                        de onde vem o muay thai/boxe tailandês?
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O JavaScript é uma linguagem de programação
+                        o pais de origem do muay thai e Tailândia 
                     </div>
                 </div>
             </article>
@@ -23,10 +23,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
+                        qual e o principal golpe do muay thai?
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O CSS é uma linguagem de estilização
+                        low kick e o principal golpe do muay thai
                     </div>
                 </div>
             </article>
