--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>LUTA</h3>
                     <div class="cartao__conteudo__pergunta">
                         de onde vem o muay thai/boxe tailandês?
                     </div>
@@ -21,7 +21,7 @@
             </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>LUTA</h3>
                     <div class="cartao__conteudo__pergunta">
                         qual e o principal golpe do muay thai?
                     </div>
