--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 <div class="cartao__conteudo">
                     <h3>LUTA</h3>
                     <div class="cartao__conteudo__pergunta">
-                        de onde vem o muay thai/boxe tailandês?
+                        De onde vem o muay thai/boxe tailandês?
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        o pais de origem do muay thai e Tailândia 
+                        O pais de origem do muay thai e Tailândia 
                     </div>
                 </div>
             </article>
@@ -23,10 +23,10 @@
                 <div class="cartao__conteudo">
                     <h3>LUTA</h3>
                     <div class="cartao__conteudo__pergunta">
-                        qual e o principal golpe do muay thai?
+                        Qual e o principal golpe do muay thai?
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        low kick e o principal golpe do muay thai
+                        low kick é o principal golpe do muay thai
                     </div>
                 </div>
             </article>
