--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Flashcard</title>
 </head>
 <body>
@@ -10,23 +11,35 @@
         <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>LUTA</h3>
+                    <h3>luta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        De onde vem o muay thai/boxe tailandês?
+                        <p>Qual e o pais de origem do muay thai</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O pais de origem do muay thai e Tailândia 
+                        <p>O muay thai e originario da tailandia<p>  
+                        </p>
                     </div>
                 </div>
             </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>LUTA</h3>
+                    <h3>luta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        Qual e o principal golpe do muay thai?
+                        <p>quais são as 8 armas do muay thai </p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        low kick é o principal golpe do muay thai
+                    <p>São os cotovelos,joelhos,punhos e as canelas</p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>luta</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>qual a função do prajied da graduaçã?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>Muitos lutadores usam como se fosse uma proteção no ringue</p>
                     </div>
                 </div>
             </article>
