--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="cartao__conteudo">
                     <h3>luta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual e o pais de origem do muay thai</p>
+                        <p>Qual e o pais de origem do muay thai?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                         <p>O muay thai e originario da tailandia<p>  
@@ -25,7 +25,7 @@
                 <div class="cartao__conteudo">
                     <h3>luta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>quais são as 8 armas do muay thai </p>
+                        <p>quais são as 8 armas do muay thai?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                     <p>São os cotovelos,joelhos,punhos e as canelas</p>
