--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="cartao__conteudo">
                     <h3>luta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>qual a função do prajied da graduação?</p>
+                        <p>qual a função do prajied da graduação do Muay Thai?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                     <p>Muitos lutadores usam como se fosse uma proteção no ringue</p>
