--- a/index.html
+++ b/index.html
@@ -9,44 +9,23 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+            <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>luta</h3>
+                    <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual e o pais de origem do muay thai?</p>
+                        <p>O que é JavaScript?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O muay thai e originario da tailandia<p>  
-                        </p>
+                        <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>luta</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>quais são as 8 armas do muay thai?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>São os cotovelos,joelhos,punhos e as canelas</p>
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>luta</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>qual a função do prajied da graduação do Muay Thai?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>Muitos lutadores usam como se fosse uma proteção no ringue</p>
-                    </div>
-                </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
